<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp"
    app:cardMaxElevation="10dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <ImageView
            android:id="@+id/ship_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/ship_image"
            tools:src="@drawable/ic_launcher_foreground"
            android:scaleType="centerInside"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/ship_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:contentDescription="@string/ship_name"
            android:padding="5dp"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/ship_image"
            tools:text="Ship Name"/>


        <TextView
            android:id="@+id/ship_passenger_capacity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:contentDescription="@string/ship_passenger"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/ship_name"
            tools:text="475785859859"/>

        <TextView
            android:id="@+id/ship_crew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/ship_crew"
            android:layout_margin="10dp"
            app:layout_constraintTop_toBottomOf="@id/ship_passenger_capacity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/ship_date"
            tools:text="242"/>
        <TextView
            android:id="@+id/ship_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/ship_date"
            android:layout_margin="10dp"
            app:layout_constraintTop_toBottomOf="@id/ship_passenger_capacity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/ship_crew"
            tools:text="08/16/1988"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>

